# pious-piper

./: .gitignore  Dockerfile  LZW.hs  PiousPiper.cabal  README.md  compress.sh  temp.txt  thoughts.md  thoughts.txt
.stack-work/install/x86_64-osx/lts-7.8/8.0.1/doc/PiousPiper-0.1.0.0/: LICENSE
.stack-work/install/x86_64-osx/lts-7.8/8.0.1/flag-cache/: PiousPiper-0.1.0.0-7JUD62QrIKHrrLhY6xrzv  PiousPiper-0.1.0.0-CBH2hPdBWWMBH4a2OIunpN  PiousPiper-0.1.0.0-FLE1ofDN3g9HUvhcyFBcUr  PiousPiper-0.1.0.0-HCFJrbnxI2u9y2MmHozHGa  PiousPiper-0.1.0.0-JMCTGPBLxl9LdhHNld1z3l  split-0.2.3.1-IJKK4pOCYGKud0jZImZke
.stack-work/install/x86_64-osx/lts-7.8/8.0.1/lib/x86_64-osx-ghc-8.0.1/PiousPiper-0.1.0.0-7JUD62QrIKHrrLhY6xrzv/: LZW.dyn_hi  ReaderWriter.dyn_hi  ReaderWriter.hi  libHSPiousPiper-0.1.0.0-7JUD62QrIKHrrLhY6xrzv-ghc8.0.1.dylib
.stack-work/install/x86_64-osx/lts-7.8/8.0.1/lib/x86_64-osx-ghc-8.0.1/PiousPiper-0.1.0.0-CBH2hPdBWWMBH4a2OIunpN/: Utilities.dyn_hi  Utilities.hi  libHSPiousPiper-0.1.0.0-CBH2hPdBWWMBH4a2OIunpN-ghc8.0.1.dylib
.stack-work/install/x86_64-osx/lts-7.8/8.0.1/pkgdb/: PiousPiper-0.1.0.0-7JUD62QrIKHrrLhY6xrzv.conf  PiousPiper-0.1.0.0-CBH2hPdBWWMBH4a2OIunpN.conf  package.cache
PiousPiper/: PiousPiper.cabal
PiousPiper/.stack-work/install/x86_64-osx/lts-7.8/8.0.1/flag-cache/: PiousPiper-0.1.0.0-CBH2hPdBWWMBH4a2OIunpN  PiousPiper-0.1.0.0-DZyimaqc7zo47ZVz9Qu2or
PiousPiper/.stack-work/install/x86_64-osx/lts-7.8/8.0.1/pkgdb/: PiousPiper-0.1.0.0-CBH2hPdBWWMBH4a2OIunpN.conf  package.cache
PiousPiper/app/: Main.hs
PiousPiper/src/: LZW.hs
app/: Compress.hs  Decompress.hs  Main.hs
files/: text.txt
files/inputs/: TaleOfTwoCities.txt  text.txt
files/outputs/compressed/: compressed-Poem.txt  compressed-TaleOfTwoCities.txt  compressed-text.txt
files/outputs/decompressed/: decompressed-compressed-Poem.txt
src/: LZW.hs  ReaderWriter.hs  Utilities.hs
test/: LZWSpec.hs
(+31 files in other folders)
