name:                PiousPiper
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/githubuser/PiousPiper#readme
license:             BSD3
license-file:        LICENSE
author:              Julian Theoderik Trajanson
maintainer:          julian.trajanson@gmail.com
copyright:           2016 Julian T. Trajanson
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.String.Strip
                       LZW
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable PiousPiper
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , PiousPiper
                     , containers
  default-language:    Haskell2010

executable Compress
  hs-source-dirs:      app
  main-is:             Compress.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , PiousPiper
                     , containers
  default-language:    Haskell2010

test-suite PiousPiper-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , PiousPiper
                     , hspec
                     , QuickCheck
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/PiousPiper
